# grid_simulation

./: Makefile  MethodsP2.docx  MethodsP2_mj.docx  README.md  particle.py  pyproject.toml  sim_analysis.ipynb  sim_analysis.py  simulation.csv  simulation_long.csv  simulation_long_tiago.csv  square.py
notebooks/: sim_analysis.ipynb
src/entrypoints/: decay_plot.py  rotation_plot.py  run_sim.py
src/grid_genius/: models.py  particle.py  square.py
